# bricklayer

./: .gitignore  AGENTS.md  Makefile  README.md  bricklayer.cabal  devenv.local.nix.example  devenv.nix
layouts/: head-bookmark.blay  head-construction.blay  head-video.blay  horizontal-rainbow-rot6.blay  square-bookmark.blay  square-construction.blay  square-marker.blay  square-mystery.blay  square-video.blay
src/Bricklayer/: Animate.hs  Blockify.hs  BrickLayout.hs  Compose.hs  Favicons.hs  Raster.hs
src/Cmd/: Animate.hs  Compose.hs  Draft.hs  Render.hs
tests/: TestSuite.hs
tests/Bricklayer/: BlockifySpec.hs
